2026-05-14_dhl_kubernetes/lab0/workspace/_example/kubernetes/manifests/backend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  revisionHistoryLimit: 0
  replicas: 4
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: migrations-job-read
      containers:
        - name: main
          image: ttl.sh/dhl/backend
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 40m
              memory: 50Mi
            limits:
              cpu: 80m
              memory: 100Mi
          startupProbe:
            httpGet:
              path: /livez
              port: 8000
            periodSeconds: 1
            failureThreshold: 20
          livenessProbe:
            httpGet:
              path: /livez
              port: 8000
