2026-05-14_dhl_kubernetes/lab0/workspace/_example/kubernetes/manifests/frontend_go_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-go
spec:
  revisionHistoryLimit: 0
  replicas: 4
  selector:
    matchLabels:
      app: frontend-go
  template:
    metadata:
      labels:
        app: frontend-go
    spec:
      containers:
        - name: main
          image: ttl.sh/dhl/frontend
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 40m
              memory: 50Mi
            limits:
              cpu: 80m
              memory: 100Mi
          startupProbe:
            httpGet:
              path: /api/livez
              port: 3000
            periodSeconds: 1
            failureThreshold: 20
          livenessProbe:
            httpGet:
              path: /api/livez
              port: 3000
