2026-05-14_dhl_kubernetes/lab0/workspace/_example/kubernetes/manifests/frontend_go_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-go
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
        - ondrej.aks.sikademo.com
      secretName: ondrej.aks.sikademo.com-tls
  rules:
    - host: ondrej.aks.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-go
                port:
                  number: 80
